--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,109 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Marker Clustering</title>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+
+      function initMap() {
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 3,
+          center: {lat: -28.024, lng: 140.887}
+        });
+
+        // Create an array of alphabetical characters used to label the markers.
+        var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+
+        // Add some markers to the map.
+        // Note: The code uses the JavaScript Array.prototype.map() method to
+        // create an array of markers based on a given "locations" array.
+        // The map() method here has nothing to do with the Google Maps API.
+        var markers = bikeLocations.map(function(location, i) {
+          return new google.maps.Marker({
+            position: location,
+            label: labels[i % labels.length]
+          });
+        });
+
+        // Add a marker clusterer to manage the markers.
+        var markerCluster = new MarkerClusterer(map, markers,
+            {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+      }
+      var networks = [];
+	  $.ajax({
+	      dataType: 'json',
+	      data: $('#formID').serialize(),
+	      type: 'GET',
+	      url: "http://localhost:3001/networks",
+	      success: function (data) {
+	        // console.log('success', data);
+	        for (var i in data) {
+			  var item = data[i];
+			  // console.log(item['latitude']);
+			  // console.log(item['longitude']);
+			  networks.push(item["_id"]);
+
+			}
+	      },
+	      async: false,
+	      error: function (XMLHttpRequest, textStatus, errorThrown) {
+	        console.log('error', errorThrown);
+	      }
+	    });
+	  // console.log(networks);
+
+
+
+      var bikeLocations = []
+      // 5993a2be0d43ff1e8c7f72e0 doesnt show any markers wtf? --> google maps shows this should appear abu dhabi
+      for (var i in networks){
+      	// console.log(networks[i]);
+		  $.ajax({
+		      dataType: 'json',
+		      data: $('#formID').serialize(),
+		      type: 'GET',
+		      url: "http://localhost:3001/stations/network/" + networks[i],
+		      success: function (data) {
+		        // console.log('success', data);
+		        for (var i in data) {
+				  var item = data[i];
+				  // console.log(item['latitude']);
+				  // console.log(item['longitude']);
+				  bikeLocations.push({'lat':item['latitude'], 'lng':item['longitude']});
+
+				}
+		      },
+		      error: function (XMLHttpRequest, textStatus, errorThrown) {
+		        console.log('error', errorThrown);
+		      }
+		    });
+		}
+	  // console.log(bikeLocations);
+    </script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEYGOESHERE&callback=initMap">
+    </script>
+  </body>
+</html>
+
