--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
   <body>
     <div id="map"></div>
     <script>
-
+    var map;
       function initMap() {
 
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -39,10 +39,25 @@
         // create an array of markers based on a given "locations" array.
         // The map() method here has nothing to do with the Google Maps API.
         var markers = networkLocations.map(function(location, i) {
-          return new google.maps.Marker({
+          var marker = new google.maps.Marker({
             position: location,
-            label: labels[i % labels.length]
+            label: labels[i % labels.length],
+            network_id: location['network_id']
           });
+          marker.addListener('click', function(){
+          	map.setZoom(15);
+          	map.setCenter(marker.getPosition());
+          	stationMarkers = getStations(marker.network_id);
+			markers = stationMarkers.map(function(location, i) {
+				var marker = new google.maps.Marker({
+					position: location,
+					label: labels[i % labels.length]
+				});
+				marker.setMap(map);
+				return marker;
+        	});
+          });
+          return marker;
         });
 
         // Add a marker clusterer to manage the markers.
@@ -57,12 +72,10 @@
 	      type: 'GET',
 	      url: "http://localhost:3001/networks",
 	      success: function (data) {
-	        console.log('success', data);
+	        // console.log('success', data);
 	        for (var i in data) {
 			  var item = data[i];
-			  // console.log(item['latitude']);
-			  // console.log(item['longitude']);
-			  networkLocations.push({'lat':item['location']['latitude'], 'lng':item['location']['longitude']});
+			  networkLocations.push({'lat':item['location']['latitude'], 'lng':item['location']['longitude'], 'network_id':item['_id']});
 
 			}
 	      },
@@ -71,8 +84,28 @@
 	        console.log('error', errorThrown);
 	      }
 	    });
-	  console.log(networkLocations);
 
+	  function getStations(network_id) {
+		var bikeLocations = []
+	  	var stationMarkers = []
+	  	$.ajax({
+	  		dataType: 'json',
+	  		type: 'GET',
+	  		url: "http://localhost:3001/stations/network/" + network_id,
+	  		success: function (data) {
+	  			console.log(data);
+	  			for (var i in data){
+	  				var item = data[i];
+	  				bikeLocations.push({'lat':item['latitude'], 'lng':item['longitude']});
+	  			}
+	  		},
+	  		async: false,
+	  		error: function (XMLHttpRequest, textStatus, errorThrown){
+	  			console.log('error', errorThrown);
+	  		}
+	  	});
+		return bikeLocations;
+	  }
 
   //     var bikeLocations = []
   //     // 5993a2be0d43ff1e8c7f72e0 doesnt show any markers wtf? --> google maps shows this should appear abu dhabi
@@ -97,12 +130,12 @@
 		//       }
 		//     });
 		// }
-	  // console.log(bikeLocations);
+	 //  console.log(bikeLocations);
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOKEyFUk7xfq8ugt15WczWs03PVgIxGWs&callback=initMap">
     </script>
   </body>
 </html>
